--- a/templates/client/list_client.html
+++ b/templates/client/list_client.html
@@ -40,8 +40,9 @@
 		<div class="card card-body">
 			<form method="get">
 
-		    <button class="btn btn-primary" type="submit">Search</button>
-		  </form>
+		    	<button class="btn btn-primary" type="submit">Search</button>
+				{{myFilter.form}}
+		  	</form>
 		</div>
 	</div>
 
